--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "node course_checker.js"
   },
   "dependencies": {
-    "axios": "^1.6.2",
     "dotenv": "^16.4.7",
-    "puppeteer": "^21.5.2"
+    "jsdom": "^26.0.0"
   }
 }
